# ai-engineering-bootcamp-sprint0

./: Makefile  README.md  docker-compose.yml  pyproject.toml
apps/chatbot_ui/src/chatbot_ui/: py.typed
notebooks/prerequisites/: 01-llm-apis.ipynb
